--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.utt.if26.resto" >
 
-    <!--
-        <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-    -->
-
     <supports-screens
         android:largeScreens="false"
         android:normalScreens="true"
@@ -32,7 +25,9 @@
         <activity
             android:name=".MainActivity"
             android:icon="@drawable/ic_launcher"
-            android:label="@string/title_activity_main" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +39,9 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_login"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:windowSoftInputMode="adjustResize|stateVisible"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -54,7 +51,9 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_register"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:windowSoftInputMode="adjustResize|stateVisible"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
@@ -62,7 +61,9 @@
         <activity
             android:name=".DetailsRestoActivity"
             android:label="@string/title_activity_details_resto"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.MainActivity" />
@@ -77,7 +78,8 @@
 
         <activity
             android:name=".DirectionsActivity"
-            android:label="@string/title_activity_directions" >
+            android:label="@string/title_activity_directions"
+            android:parentActivityName=".DetailsRestoActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.DetailsRestoActivity" />
@@ -85,7 +87,9 @@
         <activity
             android:name=".AccountActivity"
             android:label="@string/title_activity_account"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.MainActivity" />
@@ -93,7 +97,9 @@
         <activity
             android:name=".GalleryActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".DetailsRestoActivity" >
+            android:parentActivityName=".DetailsRestoActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.DetailsRestoActivity" />
