--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:name=".RegisterActivity"
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_register"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".LoginActivity"
             android:windowSoftInputMode="adjustResize|stateVisible"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
@@ -96,7 +96,7 @@
         </activity>
         <activity
             android:name=".GalleryActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_gallery"
             android:parentActivityName=".DetailsRestoActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
