--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:screenOrientation="portrait" >
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,34 +36,34 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_login"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".RegisterActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_register"
             android:parentActivityName=".LoginActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
         </activity>
         <activity
             android:name=".DetailsRestoActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_details_resto"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.MainActivity" />
@@ -86,23 +86,31 @@
         </activity>
         <activity
             android:name=".AccountActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_account"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.MainActivity" />
         </activity>
         <activity
             android:name=".GalleryActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_gallery"
             android:parentActivityName=".DetailsRestoActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.utt.if26.resto.DetailsRestoActivity" />
+        </activity>
+        <activity
+            android:name=".ImageGalleryActivity"
+            android:label="@string/title_activity_image_gallery"
+            android:parentActivityName=".GalleryActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.utt.if26.resto.GalleryActivity" />
         </activity>
     </application>
 
